<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/eeRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/eeTitleOfExerciseET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/exercise_title"
            android:textColorHint="#3598FF"
            android:textSize="32sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <TextView
            android:id="@+id/eeUnitsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/eeSecondsET"
            android:layout_alignBottom="@+id/eeSecondsET"
            android:text="@string/seconds"
            android:layout_marginLeft="20dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/eeDurationTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/eeSecondsET"
            android:layout_toLeftOf="@id/eeSecondsET"
            android:text="@string/duration"
            android:layout_marginRight="20dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/eeSecondsET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eeTitleOfExerciseET"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:ems="3"
            android:gravity="center"
            android:hint="@string/zero_seconds"
            android:inputType="number"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/eeVoiceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/eeSecondsET"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/voice"
            android:textSize="24sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/eeVoiceTV"
            android:layout_marginTop="10dp"
            android:weightSum="6"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/eePlayBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/buttonborder"
                android:text="@string/play"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/eeRecordBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/recordborder"
                android:text="@string/record"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="2dp"
                android:textColor="#FFFFFF"
                android:layout_weight="2"
                />

            <Button
                android:id="@+id/eeDeleteRecordingBTN"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:background="@drawable/buttonborder"
                android:text="@string/delete"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="10dp"
                android:textColor="#FFFFFF" />

        </LinearLayout>
        <TextView
            android:id="@+id/ExerciseTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/exercise"
            android:textSize="24sp"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@id/ExerciseTV"
            android:weightSum="6"
            android:layout_marginTop="10dp"
            >

            <Button
                android:id="@+id/eeSaveBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="10dp"
                android:background="@drawable/buttonborder"
                android:text="@string/save"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/eeDeleteBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/buttonborder"
                android:text="@string/delete"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>