<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wivRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/activityborder" >

    <Button
        android:id="@+id/wivEditBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"        
        android:background="@drawable/buttonborder"        
        android:text="@string/edit"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/wivStartBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="3dp"
        android:layout_toLeftOf="@+id/wivEditBTN"
        android:background="@drawable/buttonborder"
        android:text="@string/start"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/wivTitleOfWorkoutTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wivStartBTN"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/wivStartBTN"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@+id/wivStartBTN"
        android:gravity="center_vertical"
        android:hint="@string/workout_title"
        android:minHeight="52dp"
        android:textColor="#000000"
        android:textSize="20sp" />

</RelativeLayout>